syntax = "proto3";

package raft;

import "grpc/proto/raft/raft.proto";

service Raft {
    // HeartBeat 发送心跳
    rpc HeartBeat (Beat) returns (Beat) {
    }
    // RequestVote 发起选举，索要选票
    rpc RequestVote (ReqElection) returns (Resp) {
    }
    // FollowMe 成为Leader并要求被跟随
    rpc FollowMe (ReqFollow) returns (Resp) {
    }
    // LeaderMe 请求Leader将自身加入follows
    rpc LeaderMe (Node) returns (Resp) {
    }
    // SyncNode 同步节点信息
    rpc SyncNode (NodeMap) returns (NodeMap) {
    }
}